# spdx-license-matcher

./: .gitignore  LICENSE  README.md  bigrams.py  build_licenses.py  compare.py  computation.py  difference.py  get_set_data.py  main.py  matcher.py  normalize.py  pyproject.toml  requirements.txt  sample_license.txt  setup.py  sorensen_dice.py  utils.py
.github/workflows/: build.yml
spdx_license_matcher/: build_licenses.py  computation.py  difference.py  matcher.py  normalize.py  sorensen_dice.py  utils.py
src/spdx_license_matcher/: __init__.py  build_licenses.py  computation.py  difference.py  matcher.py  normalize.py  sorensen_dice.py  utils.py
tests/: __init__.py  test_jpype.py
