[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spdx-license-matcher"
dynamic = ["version"]
description = "Find the closest SPDX license matches for a given license text."
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Umang Taneja" },
    { name = "Gary O'Neall" },
    { name = "Rohit Lodha" },
    { name = "SPDX contributors" },
]
keywords = ["license", "license-matcher", "spdx", "compliance"]
dependencies = [
    "click>=8.3.1",
    "jellyfish>=1.2.1",
    "jpype1>=1.6.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "wheel>=0.46.3",
]

[project.scripts]
spdx-license-matcher = "spdx_license_matcher.matcher:matcher"

[project.urls]
Homepage = "https://github.com/spdx/spdx-license-matcher"

[tool.hatch.version]
path = "src/spdx_license_matcher/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["src/spdx_license_matcher"]
